--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/sqlite3": "^3.1.11",
     "@types/styled-components": "^5.1.26",
     "prettier": "^2.8.1"
   },
