--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
