--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@creatomate/preview": "^1.5.0",
+    "@vercel/kv": "^3.0.0",
     "creatomate": "^1.1.0",
     "eslint": "^8.30.0",
     "eslint-config-next": "^12.0.4",
