--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "modern-normalize": "^1.1.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-slick": "^0.30.3",
